--- a/public/mysite/scss/app.scss
+++ b/public/mysite/scss/app.scss
@@ -1,6 +1,28 @@
 @import "settings";
 @import "foundation";
 
+body {
+	background: none repeat scroll 0 0 #eceef1;
+	color: #383939;
+	font: 13px/1.5 "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.container {
+	width:900px;
+	margin:auto;
+	margin-top:20px;
+	border-radius: 4px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	background:#fff;
+}
+
+header {
+	@include clearfix;
+	padding: 30px 10px;
+}
+
+
+
 .main {
 	padding-top: 32px;
 	min-height: 320px;
