--- a/public/mysite/scss/app.scss
+++ b/public/mysite/scss/app.scss
@@ -11,6 +11,7 @@ body {
 	max-width:900px;
 	margin:auto;
 	margin-top:20px;
+	margin-bottom:20px;
 	border-radius: 4px;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	background:#fff;
