tentative home page

--- a/public/mysite/scss/_mobile.scss
+++ b/public/mysite/scss/_mobile.scss
@@ -3,4 +3,15 @@
 	#badge {
 		display:none;
 	}
+	
+	
+	.HomePage {
+		h1 {
+			font-size:30px;
+			small {
+				color:#333;
+				font-size:20px;
+			}
+		}
+	}
 }
