--- a/public/mysite/scss/app.scss
+++ b/public/mysite/scss/app.scss
@@ -184,6 +184,18 @@ h4 {
 	}
 }
 
+//GalleryPage
+
+.GalleryPage {
+	.GalleryList {
+		margin-bottom:20px;
+		li {
+			margin-bottom:20px;
+		}
+	}
+}
+
+
 ////ProgramPage
 //
 //.ProgramPage {
