partly fixing up the panorama gallery page

--- a/public/mysite/scss/app.scss
+++ b/public/mysite/scss/app.scss
@@ -195,6 +195,17 @@ h4 {
 	}
 }
 
+//Panorama Gallery Page
+
+.PanoramaGalleryPage {
+	.PanoramaList {
+		img {
+			max-width:auto;
+			height:400px;
+		}
+	}
+}
+
 
 ////ProgramPage
 //
