--- a/public/mysite/scss/app.scss
+++ b/public/mysite/scss/app.scss
@@ -200,9 +200,12 @@ h4 {
 .PanoramaGalleryPage {
 	.PanoramaList {
 		img {
-			max-width:3000px;
-			height:400px;
-			margin-bottom:20px;
+			//max-width:inherit;
+			//width:auto;
+			//height:auto;
+			
+			width:100%;
+			margin-bottom:12px;
 		}
 		margin-bottom: 40px;
 	}
