added a little margin to the gallery holder

--- a/public/mysite/scss/app.scss
+++ b/public/mysite/scss/app.scss
@@ -184,6 +184,16 @@ h4 {
 	}
 }
 
+//GalleryHolder
+
+.GalleryHolder {
+	.GalleryHolderList {
+		li {
+			margin-bottom: 20px;
+		}
+	}
+}
+
 //GalleryPage
 
 .GalleryPage {
